--- a/src/resources/playlists.fxml
+++ b/src/resources/playlists.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.client.PlaylistsController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.client.view.PlaylistsController">
     <top>
         <BorderPane maxWidth="1.7976931348623157E308">
             <left>
@@ -15,9 +15,6 @@
                     </font>
                 </Label>
             </left>
-            <right>
-                <Button fx:id="refreshButton" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Обновить" BorderPane.alignment="CENTER" />
-            </right>
             <padding>
                 <Insets left="20.0" right="20.0" />
             </padding>
