--- a/src/resources/settings.fxml
+++ b/src/resources/settings.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import sample.client.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.client.SettingsController">
+<?import sample.client.view.MyButton ?>
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.client.view.SettingsController">
    <bottom>
       <MyButton maxHeight="40.0" maxWidth="120.0" minHeight="40.0" minWidth="120.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Выйти из аккаунта" BorderPane.alignment="CENTER" />
    </bottom>
